syntax = "proto3";

package message_service.message.v1;

option go_package = "api/message_service/message/v1;messagev1";

import "message_service/message/v1/message.proto";

message GetMessagesRequest {
  int64 chat_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message GetMessagesResponse {
  repeated ChatMessage messages = 1;
}

